Updated UI and added admin edit btn

--- a/Restaurant Ordering System/public_html/Customer/customer_cart.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_cart.html
@@ -16,7 +16,7 @@
 
     <div class="relative">
       <button id="menuButton"
-              class="flex items-center justify-center w-10 h-10 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition focus:outline-none">
+              class="flex items-center justify-center w-10 h-10 border border-blue-400 text-blue-700 bg-white/70 rounded-md shadow hover:bg-white hover:shadow-lg transition focus:outline-none">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
              viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
@@ -48,7 +48,7 @@
   <div id="cartSummary" class="mt-8 text-right hidden">
     <p class="text-lg font-semibold text-gray-800">Total: <span id="totalPrice">$0.00</span></p>
     <button onclick="goToCheckout()"
-            class="mt-4 bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">
+            class="inline-block border border-blue-400 text-blue-700 bg-white/70 px-6 py-2 rounded-md shadow hover:bg-white hover:shadow-lg transition z-50">
       Proceed to Checkout
     </button>
   </div>
