--- a/Restaurant Ordering System/public_html/Customer/customer_login.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_login.html
@@ -20,7 +20,7 @@
     <!-- Right side: navigation buttons -->
     <nav class="flex items-center gap-2 ml-auto">
       <a href="customer_main.html"
-         class="bg-gray-100 text-gray-800 px-3 py-1 rounded-md hover:bg-gray-200 transition">Home</a>
+         class="inline-block border border-blue-400 text-blue-700 bg-white/70 px-3 py-1 rounded-md shadow hover:bg-white hover:shadow-lg transition">Home</a>
     </nav>
   </div>
 </header>
