Added the orders report feature

--- a/Restaurant Ordering System/public_html/Employee/admin_main.html
+++ b/Restaurant Ordering System/public_html/Employee/admin_main.html
@@ -20,7 +20,7 @@
     <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 mt-8">
       <a href="/Employee/employee_register.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700 shadow">➕ Add New Employee</a>
       <a href="/Employee/employee_list.html" class="bg-yellow-600 text-white px-6 py-3 rounded">Manage Employee</a>
-      <button class="bg-amber-600 text-white px-6 py-3 rounded hover:bg-amber-700 shadow">View Reports</button>
+      <a href="/Employee/admin_reports.html" class="bg-amber-600 text-white px-6 py-3 rounded hover:bg-amber-700 shadow">View Reports</a>
       <a href="/Employee/admin_menu.html" class="bg-green-600 text-white px-6 py-3 rounded">Manage Menu</a>
     </div>
   </main>
