--- a/Restaurant Ordering System/public_html/Customer/customer_order.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_order.html
@@ -158,7 +158,7 @@ async function loadOrders() {
       container.innerHTML = '<p class="text-center text-gray-500">You have no orders yet.</p>';
       return;
     }
-
+<!--
     container.innerHTML = data.orders.map(o => `
       <div class="bg-white shadow rounded-lg border border-gray-200 p-4 flex justify-between items-center">
         <div>
@@ -171,6 +171,25 @@ async function loadOrders() {
         }">${o.status}</span>
       </div>
     `).join('');
+-->
+
+  container.innerHTML = data.orders.map(o => `
+  <div class="bg-white shadow rounded-lg border border-gray-200 p-4 space-y-2">
+    <div class="flex justify-between items-center">
+      <h3 class="font-semibold text-gray-800">Order #${o.order_id}</h3>
+      <span class="px-3 py-1 rounded-full text-sm font-medium ${
+        o.status.toLowerCase() === 'pending' ? 'bg-yellow-100 text-yellow-800' :
+        'bg-green-100 text-green-800'
+      }">${o.status}</span>
+    </div>
+    <p class="text-sm text-gray-500">Placed: ${new Date(o.order_time).toLocaleString()}</p>
+    <div class="space-y-1">
+      ${o.items.map(item => `
+        <p class="text-gray-700">${item.item_name} × ${item.quantity}</p>
+      `).join('')}
+      </div>
+     </div>
+   `).join('');
 
   } catch (err) {
     console.error(err);
