--- a/Restaurant Ordering System/public_html/Customer/customer_checkout.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_checkout.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Checkout – Self Service Ordering</title>
+  <script src="https://js.stripe.com/v3/"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans min-h-screen flex flex-col">
